trunk/Archive2/2c/e76d742c2cb82e/output
main.cpp:16:12: error: goto into protected scope
           goto l2;
           ^
main.cpp:20:10: note: jump bypasses variable initialization
       X x;
         ^
1 error generated.
